# webrtc_android

./: .gitignore  LICENSE  README-zh.md  README.md  build.gradle  conf.gradle  gradle.properties  gradlew  settings.gradle
app/: .gitignore  build.gradle  dds.jks  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
art/xshell/: xshell+xftp.md
base/: build.gradle
enginekit/: README.md  build.gradle
enginekit/libs/: client-release.aar
enginekit/src/main/: AndroidManifest.xml
gradle/: bintray.gradle
gradle/wrapper/: gradle-wrapper.properties
jnilibray/src/main/: AndroidManifest.xml
libskywebrtc/: build.gradle
libskywebrtc2/: build.gradle
libwebrtc/: build.gradle
libwebrtc/webrtc_5776/: build.gradle
libwebrtc_m74/: build.gradle
libwebrtc_m74/src/main/: AndroidManifest.xml
module_meeting/: .gitignore
module_p2pchat/: build.gradle
module_p2pchat/src/main/: AndroidManifest.xml
rtc-chat/: bintray.gradle  bintray_upload.gradle  build.gradle
rtc_chat/: build.gradle
rtc_chat/src/main/: AndroidManifest.xml
rtc_engine/: README.md  build.gradle
rtc_engine/src/main/: AndroidManifest.xml
skywebrtc/: README.md  build.gradle
skywebrtc2/: README.md  build.gradle
skywebrtc2/src/main/: AndroidManifest.xml
skywebrtc3/: build.gradle
temp0/: README.md  build.gradle
temp1/: README.md  build.gradle
temp2/: build.gradle
temple1/: README.md  build.gradle
temple1/src/main/cpp/: CMakeLists.txt  yuvconv.c
temple2/: README.md  build.gradle
webrtclib/: README.md  build.gradle
(+772 files in other folders)
